# connector-builder-mcp

./: .env.example  .gitignore  CHANGELOG_TEMP.md  CONTRIBUTING.md  README.md  TESTING.md  checklist.md  debug_model_extraction.py  debug_workflow_responses.py  poe_tasks.toml  pyproject.toml  secrets-handling-diagram.md  test_scaffold.py
.github/: pr-welcome-community.md  pr-welcome-internal.md  pr-welcome.md  pr_welcome_message.md
.github/chatmodes/: connector-builder-mcp-test-mode.chatmode.md
.github/workflows/: actionlint.yml  auto-merge-notification.yml  autofix-command.yml  build-connector-command.yml  build-connector-test.yml  ci-run-evals.yml  ci-tests.yml  deptry-dependency-analysis.yml  github-actions-linting.yml  github-models-ci.yml  pdoc-preview.yml  pdoc-publish.yml  poe-command.yml  publish-command.yml  publish.yml  pypi-publish.yml  pytest-fast.yml  pytest-matrix.yml  python-lint.yml  run-evals.yml  run-standard-evals.yml  slash-command-dispatch.yml  test-command.yml  welcome-message.yml
builder_mcp/: __init__.py  _connector_builder.py  _util.py  server.py
connector_builder_agents/: pyproject.toml
connector_builder_agents/evals/: README.md  connectors.yaml
connector_builder_agents/prompts/: phase-1-stream-read.md  phase-3-remaining-streams.md  root-prompt-headless.md  root-prompt.md
connector_builder_agents/src/: _util.py  agents.py  cli.py  constants.py  cost_tracking.py  eval_cli.py  eval_workflow_integration.py  evals.py  evals_integration.py  evals_phoenix.py  evaluators.py  guidance.py  run.py  tools.py
connector_builder_agents/src/evals/: cli.py  dataset.py  evaluators.py  generate_summary_demo.py  helpers.py  phoenix_run.py  summary.py  task.py
connector_builder_agents/src/evals/data/: connectors.yaml
connector_builder_agents/tests/: test_evaluators.py  test_task.py
connector_builder_mcp/: __init__.py  _checklist_loader.py  _checklist_utils.py  _connector_builder.py  _connector_search.py  _docs.py  _encryption.py  _external_docs_suggester.py  _guidance.py  _manifest_history_utils.py  _manifest_scaffold.py  _manifest_scaffold_utils.py  _paths.py  _secrets.py  _text_utils.py  _tool_utils.py  _util.py  _validation_helpers.py  _validation_testing.py  anonymize.py  app.py  connector_builder.py  constants.py  encryption.py  manifest_history.py  manifest_scaffold.py  mcp_capabilities.py  prompts.py  resources.py  secrets.py  server.py  server_class.py  session_manifest.py  validation_testing.py
connector_builder_mcp/_guidance/: __init__.py  connector_build_checklist.yml  prompts.py
connector_builder_mcp/build_strategies/: __init__.py
connector_builder_mcp/build_strategies/base/: __init__.py  build_strategy.py
connector_builder_mcp/build_strategies/declarative_openapi_v3/: __init__.py  build_strategy.py  guidance.py  manifest_checks.py  manifest_tests.py  openapi_to_manifest.py
connector_builder_mcp/build_strategies/declarative_yaml_v1/: __init__.py  build_strategy.py  checklist.yaml  manifest_checks.py  manifest_tests.py  prompts.py
connector_builder_mcp/build_strategies/kotlin_destination/: __init__.py  build_strategy.py  checklist.yaml  guidance.py  manifest_checks.py  manifest_tests.py
connector_builder_mcp/build_strategies/kotlin_destination_v1/: build_strategy.py  checklist.yaml  guidance.py  manifest_checks.py  prompts.py
connector_builder_mcp/build_strategies/kotlin_source/: build_strategy.py  checklist.yaml  manifest_checks.py  manifest_tests.py  prompts.py
connector_builder_mcp/build_strategies/kotlin_source_v1/: __init__.py  build_strategy.py  checklist.yaml  guidance.py  manifest_checks.py  manifest_tests.py
connector_builder_mcp/build_strategies/openapi_sonar_v1/: build_strategy.py  checklist.yaml  manifest_checks.py  prompts.py
connector_builder_mcp/mcp/: _mcp_utils.py  _tool_utils.py  checklist.py  guidance.py  manifest_checks.py  manifest_edits.py  manifest_history.py  manifest_tests.py  prompts.py  secrets_config.py  server_info.py  smoke_tests.py
docs/: ENCRYPTION.md  encryption.md  fastmcp-cloud-deployment.md  generate.py
docs/templates/: custom.css
evals/: results.json  source-starwars.json
examples/: README.md  autogen_example.py  basic_mcp_example.py  mcp_agent.config.yaml  mcp_use_demo.py  phase_models.py  pyproject.toml  real_mcp_integration_example.py  run_github_models_agent.py  run_manager_developer_agents.py  run_mcp_agent.py  run_mcp_use_demo.py  upsonic_example.py  working_mcp_example.py
examples/examples/: run_mcp_use_demo.py
examples/star-wars-connector/: README.md  star_wars_connector_manifest.yaml
prompts/: root-prompt-headless.md
src/builder_mcp/: main.py
tests/: __init__.py  conftest.py  test_dummy_catalog.py  test_encryption.py  test_evals_integration.py  test_integration.py  test_manifest_scaffold.py  test_secrets.py  test_server.py  test_util.py
tests/integration/: test_anonymized_and_final_pages.py  test_docs_tools.py  test_privatebin.py  test_validation_and_testing.py
tests/unit/: test_anonymize.py  test_encryption.py  test_external_docs_suggester.py  test_manifest_history.py  test_manifest_scaffold.py  test_openapi_to_manifest.py  test_secrets.py  test_server.py  test_session_manifest_text.py  test_session_path_resolution.py  test_text_utils.py  test_validation_helpers.py
