[project]
name = "builder-mcp"
version = "0.1.0"
description = "MCP server for Airbyte connector building operations with AI ownership focus"
authors = [{name = "Airbyte", email = "contact@airbyte.io"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "airbyte-cdk>=6.0,<7.0",
    "typing-extensions>=4.14.1",
    "fastmcp>=0.2.0",
    "pydantic>=2.7.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pyyaml>=6.0.0",
    "coverage>=7.0.0",
    "poethepoet>=0.29.0",
]

[dependency-groups]
dev = [
    "deptry>=0.23.0",
    "pdoc>=15.0.4",
    "pyrefly>=0.25.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.4",
    "ty>=0.0.1a15",
]

[project.scripts]
builder-mcp = "builder_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "requires_creds: marks tests as requiring credentials (deselected by default)",
    "slow: marks tests as slow (deselected by default)",
]

[tool.deptry]
ignore = ["DEP002"]
