[project]
name = "airbyte-connector-builder-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.1.1",
    "openai-agents>=0.3.3",
    "mcp-agent>=0.1.15", # Transitive dependency of openai-agents
    "pydantic>=2.11.9,<3.0",
    "pyyaml>=6.0.1",
    "pandas>=2.0.0",
    "arize-phoenix-client>=1.19.1",
    "arize-phoenix-otel>=0.13.1",
    "arize-phoenix-evals>=2.1.0",
    "openinference-instrumentation-openai>=0.1.33",
    "openinference-instrumentation-openai-agents>=1.3.0",
    "emoji>=2.15.0,<3.0",
    "airbyte-cdk==7.3.7.post1.dev18600150715",
]

[dependency-groups]
dev = [
    "poethepoet>=0.37.0",
    "pytest>=8.4.2",
]
