[project]
name = "examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.1.1",
    "mcp-use>=1.3.10",
    "langchain-openai>=0.3.30",
    "openai-agents-mcp>=0.0.8",
    "openai-agents>=0.0.9",
    "mcp-agent>=0.1.13",
]
